# uden-msds

./: .gitignore  README.md
comp_3008/: gradient_descent.ipynb
comp_4401/: 02_functions.py  (+4 more)
comp_4531/: pyproject.toml
comp_4531/01_intro_nn/: Homework1-student.ipynb  chapter02_mathematical-building-blocks.ipynb
comp_4531/02_forward_back_prop/: Homework2-student.ipynb  chapter03_introduction-to-keras-and-tf.ipynb
comp_4531/03_activation_function/: Homework3-student.ipynb  chapter04_getting-started-with-neural-networks.ipynb  epoch_size_test.ipynb  jmartinez-hw3.ipynb
comp_4531/04_optimizers/: Homework4-student.ipynb  chapter05_fundamentals-of-ml.ipynb
comp_4531/05_struc_aptimize_ann/: chapter07_working-with-keras.ipynb  checkpoint_path.keras
comp_4531/06_cnn/YOLOpenguins/: README.dataset.txt  README.roboflow.txt  data.yaml
comp_4531/07_adv_cnn/: chapter09_part01_image-segmentation.ipynb  chapter09_part02_modern-convnet-architecture-patterns.ipynb
comp_4531/08_squence_models/: Homework7-student.ipynb
comp_4531/final_project/: The draft of my final project can be found here.docx  dev_training.ipynb  eda_data_process.ipynb  final_model.keras  mlflow.db  mlflow_experiments.py  outline.md  protein_class_prediction_data.py
comp_4531/final_project/mlflow-artifacts/1/2a784719b6a641ca976a8f69d5cf2b6d/artifacts/nn_double__2/: MLmodel
comp_4531/final_project/mlflow-artifacts/1/318afc75f60e4d03a2f9ea491ea00df5/artifacts/nn_single__1/: MLmodel
comp_4531/final_project/mlflow-artifacts/1/32558bdc4d2c4da19486d093ae764771/artifacts/nn_single__1/: MLmodel
(+136 files in other folders)
